fixed z-index

--- a/master.css
+++ b/master.css
@@ -58,6 +58,7 @@ footer {
     padding-top: 1em;
     padding-bottom: 1em;
     min-height: 85vh;
+    z-index: 500;
 }
 
 .selectListCont {
@@ -65,16 +66,21 @@ footer {
     display: flex;
     align-items: center;
     flex-direction: column;
+    z-index: 550;
 }
 
 .backgroundImgDiv {
     position: absolute;
+    z-index: -1;
 }
 
 .backgroundImg {
-    height: 80vh;
+    height: 81.5vh;
     width: 100%;
-    opacity: 0.19;
+    opacity: 0.45;
+    z-index: -2;
+    box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.75);
+    border: 2px solid grey;
 }
 
 .copy {
@@ -109,6 +115,9 @@ button:hover {
 .coverArt {
     width: 14.5vw;
     height: 14.5vw;
+    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
+    border: 1px solid grey;
+    margin: 2px;
 }
 
 .mainTrackListCont {
